# se-toolkit-hackathon

./: .gitignore  AGENTS.md  DEMO_SCRIPT.md  LICENSE  PRESENTATION.md  README.md  SLIDES.md  docker-compose.yml  generate_qr.py  pyproject.toml
mcp/: pyproject.toml
mcp/mcp-holidays/: pyproject.toml
mcp/mcp-holidays/data/: holidays.json
mcp/mcp-holidays/src/mcp_holidays/: __init__.py  __main__.py  server.py  settings.py  store.py  tools.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/skills/holidays/: SKILL.md
qwen-code-api/: Dockerfile
webchat/: Dockerfile  app.py
workspace/sessions/: docker_test1.jsonl  docker_test2.jsonl  v2_test-add-personal.jsonl  v2_test-categories.jsonl  v2_test-this-week.jsonl
