[project]
name = "mcp-holidays"
version = "1.0.0"
description = "MCP server for holiday management — list, add, and query holidays"
requires-python = "==3.14.*"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_holidays*"]
